# reddit-scout

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  reddit-scout-design-doc.md  scrum.md
.github/plan/: backlog.md
.github/plan/sprint/: sprint-01-project-foundation.md  sprint-02-campaign-crud.md  sprint-03-campaign-config.md  sprint-04-reddit-scanner.md  sprint-07-discord-enhancements.md
.github/plan/sprint_backup/: sprint-01-2026-01-14.md  sprint-02-2026-01-14.md  sprint-03-2026-01-14.md  sprint-04-2026-01-17.md  sprint-05-2026-01-17.md  sprint-06-2026-01-17.md  sprint-07-2026-01-22.md  sprint-08-2026-01-22.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_scanner_state.py  3339b5203673_initial_schema.py  4a1b2c3d4e5f_add_scanner_fields.py
scripts/: dev.sh  entrypoint.sh
src/community_scout/: config.py  crypto.py  database.py
src/community_scout/ai/: __init__.py  client.py
src/community_scout/api/: __init__.py  deps.py  main.py
src/community_scout/bot/: __init__.py  bot.py  commands.py  modals.py  onboarding.py
src/community_scout/hn/: __init__.py  client.py
src/community_scout/models/: __init__.py  content.py  discord_user.py
src/reddit_scout/: __init__.py  auth.py  config.py  database.py  pipeline.py  pipeline_cli.py
tests/: conftest.py  test_ai.py  test_bot.py  test_campaigns.py  test_health.py  test_models.py  test_notifier.py  test_pipeline.py  test_scanner.py  test_subreddit_discovery.py
(+44 files in other folders)
