[project]
name = "reddit-scout"
version = "0.1.0"
description = "AI-powered Reddit monitoring and engagement tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "praw>=7.7.0",
    "discord.py>=2.3.0",
    "httpx>=0.26.0",
    "supertokens-python>=0.22.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
]

[project.scripts]
reddit-scout-scanner = "reddit_scout.scanner.cli:main"
reddit-scout-pipeline = "reddit_scout.pipeline_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
